(cram
 (applies_to *)
 (deps
  (package rukaml)
  ;(package rukaml_rv64)
  ; %{project_root}/compiler.exe
  %{project_root}/back_rv64/RV64_compiler.exe
  %{project_root}/back_rv64/rukaml_stdlib.o
  ;
  ))

;;;;; fac

(rule
 (targets fac_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/fac.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac_cpsoff.exe)
 (deps
  (:src fac_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fac_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fac_cpsoff.s -o fac_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets fac_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/fac.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac_cpson.exe)
 (deps
  (:src fac_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fac_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fac_cpson.s -o fac_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to fac)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/fac.ml
  ;
  ))

;;;;; fib

(rule
 (targets fib_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/fib.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fib_cpsoff.exe)
 (deps
  (:src fib_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fib_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fib_cpsoff.s -o fib_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets fib_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/fib.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fib_cpson.exe)
 (deps
  (:src fib_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fib_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fib_cpson.s -o fib_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to fib)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/fib.ml
  ;
  ))

;;;;; anon1

(rule
 (targets anon1_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/anon1.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets anon1_cpsoff.exe)
 (deps
  (:src anon1_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    anon1_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c anon1_cpsoff.s -o anon1_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    anon1_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets anon1_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/anon1.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets anon1_cpson.exe)
 (deps
  (:src anon1_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    anon1_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c anon1_cpson.s -o anon1_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    anon1_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to anon1)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/anon1.ml
  ;
  ))

;;;;; empty

(rule
 (targets empty_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/empty.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets empty_cpsoff.exe)
 (deps
  (:src empty_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    empty_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c empty_cpsoff.s -o empty_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    empty_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets empty_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/empty.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets empty_cpson.exe)
 (deps
  (:src empty_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    empty_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c empty_cpson.s -o empty_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    empty_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to empty)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/empty.ml
  ;
  ))

;;;;; fac_acc

(rule
 (targets fac_acc_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/fac_acc.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac_acc_cpsoff.exe)
 (deps
  (:src fac_acc_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fac_acc_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fac_acc_cpsoff.s -o fac_acc_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_acc_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets fac_acc_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/fac_acc.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac_acc_cpson.exe)
 (deps
  (:src fac_acc_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fac_acc_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fac_acc_cpson.s -o fac_acc_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_acc_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to fac_acc)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/fac_acc.ml
  ;
  ))

;;;;; fac_cps

(rule
 (targets fac_cps_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/fac_cps.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac_cps_cpsoff.exe)
 (deps
  (:src fac_cps_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fac_cps_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fac_cps_cpsoff.s -o fac_cps_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_cps_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets fac_cps_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/fac_cps.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac_cps_cpson.exe)
 (deps
  (:src fac_cps_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fac_cps_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fac_cps_cpson.s -o fac_cps_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_cps_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to fac_cps)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/fac_cps.ml
  ;
  ))

;;;;; fib_acc

(rule
 (targets fib_acc_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/fib_acc.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fib_acc_cpsoff.exe)
 (deps
  (:src fib_acc_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fib_acc_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fib_acc_cpsoff.s -o fib_acc_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_acc_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets fib_acc_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/fib_acc.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fib_acc_cpson.exe)
 (deps
  (:src fib_acc_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fib_acc_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fib_acc_cpson.s -o fib_acc_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_acc_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to fib_acc)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/fib_acc.ml
  ;
  ))

;;;;; fib_cps

(rule
 (targets fib_cps_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/fib_cps.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fib_cps_cpsoff.exe)
 (deps
  (:src fib_cps_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fib_cps_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fib_cps_cpsoff.s -o fib_cps_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_cps_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets fib_cps_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/fib_cps.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fib_cps_cpson.exe)
 (deps
  (:src fib_cps_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fib_cps_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fib_cps_cpson.s -o fib_cps_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_cps_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to fib_cps)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/fib_cps.ml
  ;
  ))

;;;;; nikita2

(rule
 (targets nikita2_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/nikita2.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets nikita2_cpsoff.exe)
 (deps
  (:src nikita2_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    nikita2_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c nikita2_cpsoff.s -o nikita2_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    nikita2_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets nikita2_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/nikita2.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets nikita2_cpson.exe)
 (deps
  (:src nikita2_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    nikita2_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c nikita2_cpson.s -o nikita2_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    nikita2_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to nikita2)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/nikita2.ml
  ;
  ))

;;;;; nikita3

(rule
 (targets nikita3_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/nikita3.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets nikita3_cpsoff.exe)
 (deps
  (:src nikita3_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    nikita3_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c nikita3_cpsoff.s -o nikita3_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    nikita3_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets nikita3_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/nikita3.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets nikita3_cpson.exe)
 (deps
  (:src nikita3_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    nikita3_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c nikita3_cpson.s -o nikita3_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    nikita3_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to nikita3)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/nikita3.ml
  ;
  ))

;;;;; order1

(rule
 (targets order1_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/order1.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets order1_cpsoff.exe)
 (deps
  (:src order1_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    order1_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c order1_cpsoff.s -o order1_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    order1_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets order1_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/order1.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets order1_cpson.exe)
 (deps
  (:src order1_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    order1_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c order1_cpson.s -o order1_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    order1_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to order1)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/order1.ml
  ;
  ))

;;;;; pass_print

(rule
 (targets pass_print_cpsoff.s)
 (deps
  (:src %{project_root}/tests/rv64/pass_print.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets pass_print_cpsoff.exe)
 (deps
  (:src pass_print_cpsoff.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    pass_print_cpsoff.s
    --no-start
    -vamd64
    %{src})
   (run
    riscv64-linux-gnu-gcc-13
    -g
    -c
    pass_print_cpsoff.s
    -o
    pass_print_cpsoff.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    pass_print_cpsoff.o
    -o
    %{targets}))))

(rule
 (targets pass_print_cpson.s)
 (deps
  (:src %{project_root}/tests/rv64/pass_print.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    -cps
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets pass_print_cpson.exe)
 (deps
  (:src pass_print_cpson.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    pass_print_cpson.s
    -cps
    --no-start
    -vamd64
    %{src})
   (run
    riscv64-linux-gnu-gcc-13
    -g
    -c
    pass_print_cpson.s
    -o
    pass_print_cpson.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    pass_print_cpson.o
    -o
    %{targets}))))

(cram
 (applies_to pass_print)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  %{project_root}/tests/rv64/pass_print.ml
  ;
  ))
