(rule
 (target compiler.exe)
 (deps %{project_root}/back/llvm/llvm_compiler.exe)
 (action
  (run cp %{deps} %{target})))

(cram
 (deps
  (package rukaml)
  compiler.exe
  ;%{project_root}/llvm/llvm_backend.cmxs # issues with linksing C code
  %{project_root}/middle/rukaml_stdlib.o
  ;
  fack.ml
  ;
  ))
