(cram
 (applies_to *)
 (deps
  (package MiniML)
  (package MiniML_rv64)
  ; %{project_root}/compiler.exe
  %{project_root}/back_rv64/RV64_compiler.exe
  %{project_root}/back_rv64/rukaml_stdlib.o
  ;
  ))

;;;;; fac

(rule
 (targets fac.s)
 (deps
  (:src fac.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac.exe)
 (deps
  (:src fac.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    fac.s
    --no-start
    -vamd64
    %{src})
   (run riscv64-linux-gnu-gcc-13 -g -c fac.s -o fac.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac.o
    -o
    %{targets}))))

(cram
 (applies_to fac)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fac.ml
  ;
  ))

;;;;; fib

(rule
 (targets fib.s)
 (deps
  (:src fib.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fib.exe)
 (deps
  (:src fib.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fib.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib.o
    -o
    %{targets}))))

(cram
 (applies_to fib)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fib.ml
  ;
  ))

;;;;; fib_acc

(rule
 (targets fib_acc.s)
 (deps
  (:src fib_acc.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fib_acc.exe)
 (deps
  (:src fib_acc.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fib_acc.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_acc.o
    -o
    %{targets}))))

(cram
 (applies_to fib_acc)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fib_acc.ml
  ;./fib_acc.s
  ;
  ))

;;;;; add

(rule
 (targets add.s)
 (deps
  (:src add.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets add.exe)
 (deps
  (:src add.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o add.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    add.o
    -o
    %{targets}))))

(cram
 (applies_to add)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./add.ml
  ;./fib_acc.s
  ;
  ))

;;;;; fac_acc

(rule
 (targets fac_acc.s)
 (deps
  (:src fac_acc.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac_acc.exe)
 (deps
  (:src fac_acc.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fac_acc.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_acc.o
    -o
    %{targets}))))

(cram
 (applies_to fac_acc)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fac_acc.ml
  ;
  ))

;;;;; fac_cps

(rule
 (targets fac_cps.s)
 (deps
  (:src fac_cps.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets fac_cps.exe)
 (deps
  (:src fac_cps.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fac_cps.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_cps.o
    -o
    %{targets}))))

(cram
 (applies_to fac_cps)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fac_cps.ml
  ;
  ))

;;;;; long_app

(rule
 (targets long_app.S)
 (deps
  (:src long_app.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets long_app.exe)
 (deps
  (:src long_app.S)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o long_app.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    long_app.o
    -o
    %{targets}))))

(cram
 (applies_to long_app)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./long_app.ml
  long_app.exe
  ;
  ))

;;;;;

(rule
 (targets pass_print.s)
 (deps
  (:src pass_print.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets pass_print.exe)
 (deps
  (:src pass_print.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o pass_print.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    pass_print.o
    -o
    %{targets}))))

;;;;;

(rule
 (targets pass_print2.s)
 (deps
  (:src pass_print2.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    -vamd64
    %{src}))))

(rule
 (targets pass_print2.exe)
 (deps
  (:src pass_print2.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o pass_print2.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    pass_print2.o
    -o
    %{targets}))))

(cram
 (applies_to pass_print2)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./pass_print2.exe
  pass_print2.ml))
